

option java_outer_classname="DictionaryItemProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message DictionaryItem {
	optional string key = 1;
	optional bytes value = 2;
}