import "Value.proto";


option java_outer_classname="KeyValuePackageResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message KeyValuePackageResponse {
	repeated bytes keys = 1;
	repeated Value values = 2;
	repeated int32 flag = 3;
}