import "ColumnType.proto";
import "ColumnValue.proto";
import "AggregateFunctionType.proto";
import "ColumnDataType.proto";

option java_outer_classname="RecordColumnProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message RecordColumn
{
	optional string name = 1;
	optional bool isHidden = 2;
	optional ColumnType columnType = 3 [default = ATTRIBUTE_COLUMN];
	optional ColumnDataType dataType = 4 [default = OBJECT];
	optional AggregateFunctionType aggregateFunctionType = 5 [default = NOTAPPLICABLE];
	repeated int32 keys = 6;
	repeated ColumnValue values = 7;
}